public static class HeroAnimator
{
    public static class Params
    {
        public const string AimingAngle = nameof(AimingAngle);
        public const string IsRunning = nameof(IsRunning);
        public const string IsAiming = nameof(IsAiming);
        public const string DamageReceived = nameof(DamageReceived);
        public const string Healed = nameof(Healed);
    }
}